--- a/index.html
+++ b/index.html
@@ -136,6 +136,24 @@
   <!-- "reach out" section -->
   <section>
     <h2>Reach Out</h2>
+    <div class="contact-info">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3467.1571485314075!2d-95.48287588482538!3d29.657213882024795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640e9f43235981b%3A0x718e16755319f5dd!2sPUCS%20Pop%20Up%20Coffee%20Stop!5e0!3m2!1sen!2sus!4v1653501256109!5m2!1sen!2sus" 
+      width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div>
+        <h3>Run Buddy</h3>
+        <p>Any questions or concerns before signing up? 
+        <br />
+        Let us know and we'll be happy to talk to you!</p>
+        <address>
+          55 Main Street <br />
+          Some Town, Ca <br />
+          12345 <br />
+          P: 555.RUN.BUDZ (555.786.2839) <br />
+          E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+    </div>
+
+
   </section>
 
   <!-- footer -->
