--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
   <!-- hero/jumbotron -->
   <section class="hero">
+    <div class="hero-cta">
+      <h2>Start Building Habits.</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae possimus laudantium deserunt dolorum corporis ducimus voluptate, assumenda quam suscipit ipsum, vero quas dolore accusamus! Cum necessitatibus maxime illum numquam alias.</p>
+    </div>
     <div class="hero-form">
       <h3>Get Started Today!</h3>
       <p>Fill out this form and one of our trainers will schedule a consult.</p>
