--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       </div>
 
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3467.1571485314075!2d-95.48287588482538!3d29.657213882024795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640e9f43235981b%3A0x718e16755319f5dd!2sPUCS%20Pop%20Up%20Coffee%20Stop!5e0!3m2!1sen!2sus!4v1653501256109!5m2!1sen!2sus" 
-      style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      style="border:0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
   </div>
 
